--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
     display: flex;
     align-items: center;
     height: 100vh;
-    background: rgb(72, 19, 129);
+    background: rgb(72, 19, 129)!important;
 }
 
 
